[Polyam] Make columns-area unscrollable when modal opened
Port 2091ae92be5d04cd4dadb2200c507ce8d8d2623e to polyam-glitch

Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/columns.scss
+++ b/app/javascript/flavours/polyam/styles/components/columns.scss
@@ -12,6 +12,10 @@
   overflow-x: auto;
   position: relative;
 
+  &.unscrollable {
+    overflow-x: hidden;
+  }
+
   &__panels {
     display: flex;
     justify-content: center;
