[Polyam] Add more tips to onboarding flow in web UI
Port c35e3cb6ac33e23d3b189edddf3bad6a671070fa to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components/media.scss
+++ b/app/javascript/flavours/glitch/styles/components/media.scss
@@ -368,6 +368,11 @@
   &.active {
     opacity: 1;
   }
+
+  &:focus {
+    outline: 0;
+    background-color: $highlight-text-color;
+  }
 }
 
 .media-modal__close {
