--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -579,6 +579,17 @@
     }
   }
 
+  &__badges {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    padding: 5px 10px;
+
+    .account-role {
+      line-height: unset;
+    }
+  }
+
   &__tabs {
     display: flex;
     align-items: flex-end;
@@ -588,14 +599,6 @@
     height: 130px;
     overflow: hidden;
     margin-inline-start: -2px; // aligns the pfp with content below
-
-    .account-role {
-      margin: 0 2px;
-      padding: 4px 0;
-      box-sizing: border-box;
-      min-width: 90px;
-      text-align: center;
-    }
 
     &__buttons {
       display: flex;
