--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -936,9 +936,6 @@ a.status-card {
   aspect-ratio: 1;
   background: lighten($ui-base-color, 8%);
   position: relative;
-  border-radius: 8px;
-  border-start-end-radius: 0;
-  border-end-end-radius: 0;
 
   & > .fa {
     font-size: 21px;
@@ -951,9 +948,6 @@ a.status-card {
 }
 
 .status-card__image-image {
-  border-radius: 8px;
-  border-start-end-radius: 0;
-  border-end-end-radius: 0;
   display: block;
   margin: 0;
   width: 100%;
@@ -964,9 +958,6 @@ a.status-card {
 }
 
 .status-card__image-preview {
-  border-radius: 8px;
-  border-start-end-radius: 0;
-  border-end-end-radius: 0;
   display: block;
   margin: 0;
   width: 100%;
@@ -991,6 +982,15 @@ a.status-card {
 .status-card.expanded .status-card__image {
   width: 100%;
   aspect-ratio: auto;
+}
+
+.status-card__image,
+.status-card__image-image,
+.status-card__image-preview {
+  border-start-start-radius: 8px;
+  border-start-end-radius: 0;
+  border-end-end-radius: 0;
+  border-end-start-radius: 8px;
 }
 
 .status-card.expanded .status-card__image,
