Add reactions count to toot moderation interface
When clicking "open this toot in the moderation interface" the reaction count was missing from the stats.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/statuses/show.html.haml
+++ b/app/views/admin/statuses/show.html.haml
@@ -41,6 +41,9 @@
       %tr
         %th= t('admin.statuses.favourites')
         %td= friendly_number_to_human @status.favourites_count
+      %tr
+        %th= t('admin.statuses.reactions')
+        %td= friendly_number_to_human @status.reactions_count
 
 %hr.spacer/
 
