--- a/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
+++ b/app/javascript/flavours/glitch/styles/oatstodon/diff.scss
@@ -79,6 +79,15 @@ hr {
   &.status-direct {
     background: lighten($ui-base-color, 8%);
   }
+
+  &.collapsed {
+    &.status-direct > .status__content::after {
+      background: linear-gradient(
+        rgba(lighten($ui-base-color, 8%), 0),
+        rgba(lighten($ui-base-color, 8%), 1)
+      );
+    }
+  }
 }
 
 .focusable {
