Fix reaction bar being hidden in announcements
Adding `.reactions-bar--empty` to `announcements.scss` unfortunately causes the reaction bar to be hidden in announcements, which prevents users from adding reactions.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -384,6 +384,10 @@
   .notification__message {
     margin: -10px 0 10px;
   }
+
+  .reactions-bar--empty {
+    display: none;
+  }
 }
 
 .notification-favourite {
@@ -594,6 +598,10 @@
   .video-player,
   .audio-player {
     margin-top: 8px;
+  }
+
+  .reactions-bar--empty {
+    display: none;
   }
 }
 
