--- a/app/views/admin/reports/_actions.html.haml
+++ b/app/views/admin/reports/_actions.html.haml
@@ -18,6 +18,11 @@
         = t('admin.reports.actions.delete_description_html')
     .report-actions__item
       .report-actions__item__button
+        = button_tag t('admin.reports.hide_and_resolve'), name: :hide, class: 'button button--destructive'
+      .report-actions__item__description
+        = t('admin.reports.actions.hide_description_html')
+    .report-actions__item
+      .report-actions__item__button
         = button_tag t('admin.accounts.silence'), name: :silence, class: 'button button--destructive'
       .report-actions__item__description
         = t('admin.reports.actions.silence_description_html')
