[Polyam] Change icons in web UI
Port 134de736dcbc6aa613fd5aec21d983d92d8b0be8 to polyam-glitch

Co-authored-by: Renaud Chaput <renchap@gmail.com>
Co-authored-by: Plastikmensch <plastikmensch@users.noreply.github.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -305,6 +305,16 @@
     color: $highlight-text-color;
   }
 
+  .icon {
+    color: $highlight-text-color;
+    width: 18px;
+    height: 18px;
+  }
+
+  .icon-star {
+    color: $gold-star;
+  }
+
   > span {
     display: block;
     overflow: hidden;
@@ -854,5 +864,10 @@
     color: inherit;
     font-weight: 500;
     text-decoration: none;
+  }
+
+  .icon {
+    width: 16px;
+    height: 16px;
   }
 }
