--- a/app/javascript/flavours/polyam/styles/components/search.scss
+++ b/app/javascript/flavours/polyam/styles/components/search.scss
@@ -24,6 +24,15 @@
       margin-bottom: 10px;
     }
 
+    .icon-button {
+      padding: 0;
+    }
+
+    .icon {
+      width: 18px;
+      height: 18px;
+    }
+
     &__menu {
       margin-bottom: 20px;
 
@@ -153,6 +162,27 @@
     }
   }
 
+  .icon {
+    position: absolute;
+    top: 13px;
+    inset-inline-end: 10px;
+    display: inline-block;
+    opacity: 0;
+    transition: all 100ms linear;
+    transition-property: color, transform, opacity;
+    width: 24px;
+    height: 24px;
+    color: $secondary-text-color;
+    cursor: default;
+    pointer-events: none;
+
+    &.active {
+      pointer-events: auto;
+      opacity: 0.3;
+    }
+  }
+
+  .icon-search,
   .fa-search {
     transform: rotate(0deg);
 
@@ -162,6 +192,7 @@
     }
   }
 
+  .icon-times-circle,
   .fa-times-circle {
     top: 17px;
     transform: rotate(0deg);
@@ -186,11 +217,9 @@
   font-weight: 500;
   font-size: 16px;
   cursor: default;
-
-  .fa {
-    display: inline-block;
-    margin-inline-end: 5px;
-  }
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 .search-results__info {
@@ -200,21 +229,6 @@
 }
 
 .trends {
-  &__header {
-    color: $dark-text-color;
-    background: lighten($ui-base-color, 2%);
-    border-bottom: 1px solid darken($ui-base-color, 4%);
-    font-weight: 500;
-    padding: 15px;
-    font-size: 16px;
-    cursor: default;
-
-    .fa {
-      display: inline-block;
-      margin-inline-end: 5px;
-    }
-  }
-
   &__item {
     display: flex;
     align-items: center;
