--- a/app/javascript/flavours/polyam/styles/components/drawer.scss
+++ b/app/javascript/flavours/polyam/styles/components/drawer.scss
@@ -52,7 +52,7 @@
 .drawer__header {
   flex: none;
   font-size: 16px;
-  background: lighten($ui-base-color, 8%);
+  background: $ui-base-color;
   margin-bottom: 10px;
   display: flex;
   flex-direction: row;
@@ -60,7 +60,7 @@
   overflow: hidden;
 
   & > * {
-    display: block;
+    display: flex;
     box-sizing: border-box;
     border-bottom: 2px solid transparent;
     padding: 15px 5px 13px;
@@ -70,6 +70,8 @@
     text-align: center;
     text-decoration: none;
     cursor: pointer;
+    align-items: center;
+    justify-content: center;
   }
 
   a {
@@ -149,8 +151,10 @@
     display: flex;
     justify-content: space-between;
 
-    h3 .fa {
-      margin-inline-end: 5px;
+    h3 {
+      display: flex;
+      align-items: center;
+      gap: 5px;
     }
 
     button {
@@ -202,7 +206,7 @@
   position: absolute;
   top: 0;
   inset-inline-start: 0;
-  background: lighten($ui-base-color, 13%);
+  background: $ui-base-color;
   box-sizing: border-box;
   padding: 0;
   display: flex;
@@ -218,7 +222,7 @@
 }
 
 .drawer__inner__mastodon {
-  background: lighten($ui-base-color, 13%)
+  background: $ui-base-color
     url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 234.80078 31.757813" width="234.80078" height="31.757812"><path d="M19.599609 0c-1.05 0-2.10039.375-2.90039 1.125L0 16.925781v14.832031h234.80078V17.025391l-16.5-15.900391c-1.6-1.5-4.20078-1.5-5.80078 0l-13.80078 13.099609c-1.6 1.5-4.19883 1.5-5.79883 0L179.09961 1.125c-1.6-1.5-4.19883-1.5-5.79883 0L159.5 14.224609c-1.6 1.5-4.20078 1.5-5.80078 0L139.90039 1.125c-1.6-1.5-4.20078-1.5-5.80078 0l-13.79883 13.099609c-1.6 1.5-4.20078 1.5-5.80078 0L100.69922 1.125c-1.600001-1.5-4.198829-1.5-5.798829 0l-13.59961 13.099609c-1.6 1.5-4.200781 1.5-5.800781 0L61.699219 1.125c-1.6-1.5-4.198828-1.5-5.798828 0L42.099609 14.224609c-1.6 1.5-4.198828 1.5-5.798828 0L22.5 1.125C21.7.375 20.649609 0 19.599609 0z" fill="#{hex-color($ui-base-color)}"/></svg>')
     no-repeat bottom / 100% auto;
   flex: 1;
@@ -277,7 +281,7 @@
           bottom /
           100%
           auto,
-        lighten($ui-base-color, 13%);
+        $ui-base-color;
     } @else {
       background:
         url('~flavours/polyam/images/wave-drawer-glitched.png')
@@ -285,7 +289,7 @@
           bottom /
           100%
           auto,
-        lighten($ui-base-color, 13%);
+        $ui-base-color;
     }
 
     & > .mastodon {
