--- a/app/javascript/flavours/polyam/styles/components/media.scss
+++ b/app/javascript/flavours/polyam/styles/components/media.scss
@@ -70,7 +70,9 @@
 }
 
 .media-gallery__gifv__label {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: $white;
   background: rgba($black, 0.65);
   padding: 2px 6px;
@@ -80,6 +82,11 @@
   z-index: 1;
   pointer-events: none;
   line-height: 18px;
+
+  .icon {
+    width: 15px;
+    height: 15px;
+  }
 }
 
 .media-gallery {
@@ -601,6 +608,7 @@
     }
   }
 
+  // Keeping font-size here and in .player-button as otherwise current icons too small
   &__buttons {
     display: flex;
     flex: 0 1 auto;
@@ -610,13 +618,14 @@
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
+    gap: 5px;
 
     .player-button {
       display: inline-block;
       outline: 0;
+      padding: 5px;
       flex: 0 0 auto;
       background: transparent;
-      padding: 5px;
       font-size: 16px;
       border: 0;
       color: rgba($white, 0.75);
