--- a/app/javascript/flavours/polyam/styles/components/modal.scss
+++ b/app/javascript/flavours/polyam/styles/components/modal.scss
@@ -464,19 +464,6 @@
   background-color: inherit;
 }
 
-.actions-modal {
-  .status {
-    background: $white;
-    border-bottom-color: $ui-secondary-color;
-    padding-top: 10px;
-    padding-bottom: 10px;
-  }
-
-  .dropdown-menu__separator {
-    border-bottom-color: $ui-secondary-color;
-  }
-}
-
 .boost-modal__container {
   overflow-x: scroll;
   padding: 10px;
@@ -898,6 +885,7 @@
 }
 
 .actions-modal {
+  // Kept from upstream as otherwise the dropdown modal in mobile layout is unusable with long toots
   .status {
     overflow-y: auto;
     max-height: 300px;
