--- a/app/javascript/flavours/polyam/styles/components/status.scss
+++ b/app/javascript/flavours/polyam/styles/components/status.scss
@@ -618,6 +618,13 @@
   color: $dark-text-color;
   font-size: 14px;
   line-height: 18px;
+
+  .icon {
+    width: 15px;
+    height: 15px;
+    position: relative;
+    top: 0.145em;
+  }
 }
 
 .detailed-status__action-bar {
@@ -634,19 +641,27 @@
 }
 
 .detailed-status__link {
+  display: inline-flex;
+  align-items: center;
   color: inherit;
   text-decoration: none;
-  white-space: nowrap;
+  gap: 6px;
+  position: relative;
+
+  // Messes with alignment
+  // top: 0.145em;
+
+  .icon {
+    top: 0;
+  }
 }
 
 .detailed-status__favorites,
 .detailed-status__reblogs,
 .detailed-status__reactions {
-  display: inline-block;
   font-weight: 500;
   font-size: 12px;
-  line-height: 17px;
-  margin-inline-start: 6px;
+  line-height: 18px;
 }
 
 .status__display-name,
@@ -950,6 +965,16 @@ a.status-card {
     inset-inline-start: 50%;
     transform: translate(-50%, -50%);
   }
+
+  & > .icon {
+    width: 18px;
+    height: 18px;
+    position: absolute;
+    transform-origin: 50% 50%;
+    top: 50%;
+    inset-inline-start: 50%;
+    transform: translate(-50%, -50%);
+  }
 }
 
 .status-card__image-image {
@@ -1033,10 +1058,6 @@ a.status-card {
     align-items: center;
     justify-content: center;
     font-size: 26px;
-
-    .fa {
-      display: block;
-    }
   }
 
   &__list {
@@ -1072,6 +1093,7 @@ a.status-card {
       display: block;
     }
 
+    .icon,
     .fa {
       color: $dark-text-color;
     }
@@ -1239,6 +1261,12 @@ a.status-card {
     display: block;
     font-size: 24px;
     font-weight: 400;
+    margin-bottom: 10px;
+  }
+
+  .icon {
+    width: 24px;
+    height: 24px;
     margin-bottom: 10px;
   }
 
