--- a/app/javascript/flavours/polyam/styles/statuses.scss
+++ b/app/javascript/flavours/polyam/styles/statuses.scss
@@ -175,6 +175,12 @@
 
     .status__visibility-icon {
       padding: 0 4px;
+
+      .icon {
+        width: 1em;
+        height: 1em;
+        margin-bottom: -2px;
+      }
     }
 
     .status__info .status__display-name {
@@ -215,7 +221,8 @@
 
 .status__content__read-more-button,
 .status__content__translate-button {
-  display: block;
+  display: flex;
+  align-items: center;
   font-size: 15px;
   line-height: 20px;
   color: $highlight-text-color;
@@ -228,5 +235,10 @@
   &:hover,
   &:active {
     text-decoration: underline;
+  }
+
+  .icon {
+    width: 15px;
+    height: 15px;
   }
 }
