--- a/app/javascript/flavours/polyam/styles/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/accounts.scss
@@ -328,6 +328,11 @@
     }
   }
 
+  .icon {
+    width: 18px;
+    height: 18px;
+  }
+
   .verified {
     border: 1px solid rgba($valid-value-color, 0.5);
     background: rgba($valid-value-color, 0.25);
