--- a/app/javascript/flavours/glitch/styles/homogay/diff.scss
+++ b/app/javascript/flavours/glitch/styles/homogay/diff.scss
@@ -205,7 +205,8 @@ body {
 .doodle-modal__action-bar,
 .confirmation-modal__action-bar,
 .mute-modal__action-bar,
-.block-modal__action-bar {
+.block-modal__action-bar,
+.alt-text-warning-modal__action-bar {
   background: $ui-base-semi-lighter-color;
 }
 
