--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -5595,8 +5595,7 @@ a.status-card {
 .actions-modal,
 .mute-modal,
 .block-modal,
-.compare-history-modal,
-.alt-text-warning-modal {
+.compare-history-modal {
   background: lighten($ui-secondary-color, 8%);
   color: $inverted-text-color;
   border-radius: 8px;
@@ -5620,7 +5619,6 @@ a.status-card {
 .boost-modal__action-bar,
 .confirmation-modal__action-bar,
 .mute-modal__action-bar,
-.alt-text-warning-modal__action-bar,
 .block-modal__action-bar {
   display: flex;
   justify-content: space-between;
@@ -5653,19 +5651,6 @@ a.status-card {
 .report-modal {
   width: 90vw;
   max-width: 700px;
-}
-
-.alt-text-warning-modal {
-  &__title {
-    font-size: 21px;
-    line-height: 26px;
-    font-weight: 700;
-    margin-bottom: 15px;
-
-    @media screen and (height <= 800px) {
-      font-size: 18px;
-    }
-  }
 }
 
 .report-dialog-modal {
@@ -6068,7 +6053,6 @@ a.status-card {
 
 .confirmation-modal__container,
 .mute-modal__container,
-.alt-text-warning-modal__container,
 .block-modal__container,
 .report-modal__target {
   padding: 30px;
