Remove CSS from custom themes
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/homogay/diff.scss
+++ b/app/javascript/flavours/glitch/styles/homogay/diff.scss
@@ -205,8 +205,7 @@ body {
 .doodle-modal__action-bar,
 .confirmation-modal__action-bar,
 .mute-modal__action-bar,
-.block-modal__action-bar,
-.alt-text-warning-modal__action-bar {
+.block-modal__action-bar {
   background: $ui-base-semi-lighter-color;
 }
 
