--- a/app/javascript/flavours/glitch/styles/fairy-floss/diff.scss
+++ b/app/javascript/flavours/glitch/styles/fairy-floss/diff.scss
@@ -576,8 +576,7 @@ a.mention,
 .mute-modal,
 .block-modal,
 .boost-modal,
-.confirmation-modal,
-.alt-text-warning-modal {
+.confirmation-modal {
   background: lighten($purple2, 8%);
   color: $primary-text-color;
 
