Port account rows design change (#272)
* [Polyam] Change design of account rows in web UI

Port ef127c964a60f365129bc97a2cb2fc6d12ba6407 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix regressions from change in account row design in web UI

Port 46483ae849bc06ee74f4745f4564b213e742c51c to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix overflow behavior of account rows

Port 5fae2de454806730742b7be7435ae1c4fb97cf3c to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Change follow button in account row to be more obvious in web UI

Partially port 0ddc89528213859bf4caeefd475a93ed973ab0e0 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Keep old design of account rows

Sets minimal to default true and shows buttons when available

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

---------

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>
Co-authored-by: Eugen Rochko <eugen@zeonfederated.com>
Co-authored-by: Claire <claire.github-309c@sitedethib.com>

--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -12,9 +12,23 @@
     text-decoration: none;
     font-size: 14px;
 
-    &--with-note {
-      strong {
-        display: inline;
+    .display-name {
+      margin-bottom: 4px;
+    }
+
+    .display-name strong {
+      display: inline;
+    }
+  }
+
+  &--minimal {
+    .account__display-name {
+      .display-name {
+        margin-bottom: 0;
+      }
+
+      .display-name strong {
+        display: block;
       }
     }
   }
@@ -56,6 +70,7 @@
 
 .account__wrapper {
   display: flex;
+  align-items: center;
 }
 
 .account__avatar-wrapper {
@@ -147,6 +162,9 @@
   height: 18px;
   padding: 10px;
   white-space: nowrap;
+  display: flex;
+  align-items: center;
+  gap: 4px;
 }
 
 .account__header__wrapper {
@@ -807,4 +825,33 @@
 
 .account-memorial-banner__message {
   margin-bottom: 0;
+}
+
+.account__contents {
+  overflow: hidden;
+}
+
+.account__details {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 1em;
+}
+
+.verified-badge {
+  display: inline-flex;
+  align-items: center;
+  color: $valid-value-color;
+  gap: 4px;
+  white-space: nowrap;
+
+  > span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
+
+  a {
+    color: inherit;
+    font-weight: 500;
+    text-decoration: none;
+  }
 }
