--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -854,6 +854,11 @@
 
 .account__contents {
   overflow: hidden;
+
+  > .account__note {
+    margin-top: 0;
+    -webkit-line-clamp: 2;
+  }
 }
 
 .account__details {
