Port onboarding changes (#273)
* Re-add onboarding actions

These were deleted, probably because unused, but the new onboarding requires these.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Add new onboarding flow to web UI

Port 0461f83320378fb8cee679da896ce35cec5bcbf3 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Add more tips to onboarding flow in web UI

Port c35e3cb6ac33e23d3b189edddf3bad6a671070fa to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix compose textarea scroll behavior

Port 746979f75d3056a3db2fd37bac9ccab0962450b1 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Rewrite VerifiedBadge component as function component

Port 140aa6b054bb73b10a33bda17090453dd550267a to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Rewrite <Check /> as FC

Port 6fdbee240cbfa8d9068e9b5d0f43e6717186742a to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix Onboarding Errors

Port b8a2430642ac3a7d181ea078fb04654e2a200934 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix spelling of "Lets" on the onboarding page after clicking the confirmation email

Port 52d36f0f986f273c107aacbe929abb29dd0e2a71 to polyam-glitch

Co-authored-by: Steven Munn <stevenjmunn@gmail.com>
Co-authored-by: Claire <claire.github-309c@sitedethib.com>
Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Change composer highlight border size to be more noticeable

Port aa4c9730f6da845c275d7b2a574954fafb05b88f to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Change "Follow 7 p

--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -689,3 +689,17 @@
     }
   }
 }
+
+.compose-form__highlightable {
+  display: flex;
+  flex-direction: column;
+  flex: 0 1 auto;
+  border-radius: 4px;
+  transition: box-shadow 300ms linear;
+  min-height: 0;
+
+  &.active {
+    transition: none;
+    box-shadow: 0 0 0 6px rgba(lighten($highlight-text-color, 8%), 0.7);
+  }
+}
