Remove outlines from mascot and spoiler button
The mascot in the bottom of the compose form can be cycled.
Because it is a button, an outline was applied.

The spoiler button has an outline, which is not the case in vanilla.
The change preventing the outline was never included in glitch-soc.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components/drawer.scss
+++ b/app/javascript/flavours/glitch/styles/components/drawer.scss
@@ -241,6 +241,10 @@
     height: 100%;
     border: 0;
     cursor: inherit;
+
+    &:focus-visible {
+      outline: none;
+    }
   }
 
   @media screen and (height >= 640px) {
