--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -131,6 +131,10 @@
       background: lighten($ui-base-color, 33%);
       text-decoration: none;
     }
+
+    &:focus {
+      outline: none;
+    }
   }
 }
 
