Port UI focus changes (#274)
* [Polyam] Change focus ui for keyboard only input

Port 59478a1b46e934c75ad27f1270d9b9411de3f185 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix focus and hover styles in web UI

Port cfd50f30bb5dda4dd90e1ad01f3e62c99135c36f to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] change column link to add a better keyboard focus indicator

Port 6308dca76aef6dd8265813d58f7aab3f96eb21cc to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* [Polyam] Fix wrong color on active icons with counters in web UI

Port 728eb6a15387da9074ccc024c9002f74ff829470 to polyam-glitch

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Remove outlines from mascot and spoiler button

The mascot in the bottom of the compose form can be cycled.
Because it is a button, an outline was applied.

The spoiler button has an outline, which is not the case in vanilla.
The change preventing the outline was never included in glitch-soc.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

* Remove tabindex from status content

Status content was focusable twice because of the redundant tabindex.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

---------

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>
Co-authored-by: Trevor Wolf <teeerevor@gmail.com>
Co-authored-by: Eugen Rochko <eugen@zeonfederated.com>

--- a/app/javascript/flavours/glitch/styles/components/compose_form.scss
+++ b/app/javascript/flavours/glitch/styles/components/compose_form.scss
@@ -530,19 +530,6 @@
   .privacy-dropdown__value {
     background: $simple-background-color;
     border-radius: 4px 4px 0 0;
-    box-shadow: 0 -4px 4px rgba($base-shadow-color, 0.1);
-
-    .icon-button {
-      transition: none;
-    }
-
-    &.active {
-      background: $ui-highlight-color;
-
-      .icon-button {
-        color: $primary-text-color;
-      }
-    }
   }
 
   &.top .privacy-dropdown__value {
@@ -551,13 +538,13 @@
 
   .privacy-dropdown__dropdown {
     display: block;
-    box-shadow: 2px 4px 6px rgba($base-shadow-color, 0.1);
+    box-shadow: var(--dropdown-shadow);
   }
 }
 
 .privacy-dropdown__dropdown {
   border-radius: 4px;
-  box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
+  box-shadow: var(--dropdown-shadow);
   background: $simple-background-color;
   overflow: hidden;
   transform-origin: 50% 0;
@@ -612,7 +599,6 @@
   column-gap: 5px;
 
   .compose-form__publish-button-wrapper {
-    overflow: hidden;
     padding-top: 10px;
 
     button {
@@ -629,7 +615,7 @@
 .language-dropdown {
   &__dropdown {
     background: $simple-background-color;
-    box-shadow: 2px 4px 15px rgba($base-shadow-color, 0.4);
+    box-shadow: var(--dropdown-shadow);
     border-radius: 4px;
     overflow: hidden;
     z-index: 2;
