Adjust role badge preview for new colors
Accent color is now used for the border and the background color is a bit less transparent.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -21,7 +21,7 @@
       .fields-row__column.fields-row__column-6
         .user-role__preview
           :ruby
-            default_style = !form.object.color.empty? ? "background-color: #{form.object.color}19; border-color: #{form.object.color}80;" : ''
+            default_style = !form.object.color.empty? ? "background-color: #{form.object.color}39; border-color: #{form.object.color};" : ''
             default_dark = "background-color: rgba(217, 225, 232, 0.1); border-color: rgba(217, 225, 232, 0.5);"
             default_light = "background-color: rgba(40, 44, 55, 0.1); border-color: rgba(40, 44, 55, 0.5);"
           .item.dark
