--- a/app/views/custom_css/show.css.erb
+++ b/app/views/custom_css/show.css.erb
@@ -5,8 +5,8 @@
 <%- UserRole.where(highlighted: true).select { |role| role.color.present? }.each do |role| %>
 .user-role-<%= role.id %> {
   --user-role-accent: <%= role.color %>;
-  --user-role-background: <%= role.color + '19' %>;
-  --user-role-border: <%= role.color + '80' %>;
+  --user-role-background: <%= role.color + '39' %>;
+  --user-role-border: <%= role.color %>;
 }
 
 <%- end %>
