--- a/app/javascript/flavours/glitch/styles/admin.scss
+++ b/app/javascript/flavours/glitch/styles/admin.scss
@@ -1030,6 +1030,9 @@ a.name-tag,
 
       .account-role {
         color: $ui-secondary-color;
+        background-color: var(--user-role-background, rgba($ui-secondary-color, 0.1));
+        border-color: var(--user-role-border, rgba($ui-secondary-color, 0.5));
+
       }
     }
 
@@ -1038,6 +1041,9 @@ a.name-tag,
 
       .account-role {
         color: $classic-secondary-color;
+        background-color: var(--user-role-background, rgba($classic-secondary-color, 0.1));
+        border-color: var(--user-role-border, rgba($classic-secondary-color, 0.5));
+
       }
     }
 
@@ -1046,6 +1052,8 @@ a.name-tag,
 
       .account-role {
         color: $classic-base-color;
+        background-color: var(--user-role-background, rgba($classic-base-color, 0.1));
+        border-color: var(--user-role-border, rgba($classic-base-color, 0.5));
       }
     }
   }
