--- a/app/javascript/flavours/glitch/styles/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/accounts.scss
@@ -239,6 +239,17 @@
     opacity: 0.75;
     letter-spacing: 0;
   }
+
+  &.pinned {
+    margin: 0 2px;
+    padding: 4px 0;
+    min-width: 90px;
+    text-align: center;
+    box-sizing: border-box;
+    justify-content: center;
+    line-height: 12px;
+    border-radius: 4px;
+  }
 }
 
 .information-badge {
