--- a/app/javascript/flavours/glitch/styles/components/accounts.scss
+++ b/app/javascript/flavours/glitch/styles/components/accounts.scss
@@ -592,11 +592,10 @@
 
   &__tabs {
     display: flex;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: space-between;
     padding: 7px 10px;
-    margin-top: -81px;
-    height: 130px;
+    margin-top: -55px;
     overflow: hidden;
     margin-inline-start: -2px; // aligns the pfp with content below
 
