--- a/app/views/admin/roles/_form.html.haml
+++ b/app/views/admin/roles/_form.html.haml
@@ -20,15 +20,18 @@
       .fields-row__column.fields-row__column-6
         .user-role__preview
           .item.dark
-            .avatar
-              .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-1' }= form.object.name
+            .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-1' }
+              = person_icon
+              %span= form.object.name
           .item.light
-            .avatar
-              .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-2' }= form.object.name
+            .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-2' }
+              = person_icon
+              %span= form.object.name
           - if current_user.setting_skin != 'default' && current_user.setting_skin != 'mastodon-light'
             .item.current
-              .avatar
-                .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-3' }= form.object.name
+              .account-role{ class: "user-role-#{form.object.id}", :id => 'user-role-preview-3' }
+                = person_icon
+                %span= form.object.name
   %hr.spacer/
 
   .fields-group
