Fix underline being white
Glitch-soc adds an underline to all links, but because of conflict with CSS it was white when it should've been in blue.

Signed-off-by: polyamAdmin <117664621+polyamAdmin@users.noreply.github.com>

--- a/app/javascript/flavours/glitch/styles/components/status.scss
+++ b/app/javascript/flavours/glitch/styles/components/status.scss
@@ -829,6 +829,9 @@ a.status-card {
   &:hover,
   &:focus,
   &:active {
+    // Fix underline being white
+    text-decoration-color: $highlight-text-color;
+
     .status-card__title,
     .status-card__host,
     .status-card__author,
