--- a/app/javascript/flavours/polyam/styles/components/accounts.scss
+++ b/app/javascript/flavours/polyam/styles/components/accounts.scss
@@ -159,6 +159,12 @@
   display: flex;
   align-items: center;
   gap: 4px;
+
+  // Fixes size of follow/unfollow button in notifications and user lists
+  .icon {
+    width: 23px;
+    height: 23px;
+  }
 }
 
 .account__header__wrapper {
@@ -307,8 +313,8 @@
 
   .icon {
     color: $highlight-text-color;
-    width: 18px;
-    height: 18px;
+    width: 15px;
+    height: 15px;
   }
 
   .icon-star {
@@ -601,8 +607,8 @@
         padding: 5px;
 
         .icon {
-          width: 24px;
-          height: 24px;
+          width: 21px;
+          height: 21px;
         }
       }
     }
@@ -872,7 +878,7 @@
   }
 
   .icon {
-    width: 16px;
-    height: 16px;
+    width: 13px;
+    height: 13px;
   }
 }
